# pais

./: .gitignore  README.md  bestmods.ipynb  crossval.ipynb  dimred.ipynb  environment.yml  featfilter.ipynb  featuregen.ipynb  pyproject.toml
pais/: bestmods.ipynb  dimred.ipynb  featfilter.ipynb
src/: crossval.ipynb  featuregen.ipynb
